fix tooltips pins too close to some texts

--- a/app/components/LinkedWebentities/LinkedWebentities.styl
+++ b/app/components/LinkedWebentities/LinkedWebentities.styl
@@ -14,6 +14,8 @@
             padding: 10px
             background: var(--color-grey)
             width: 100%
+            span.list-toggle-title
+                margin-right: 3px;
         button.is-selected
             button('active')
         button:first-of-type
