--- a/app/containers/BrowserContainer/BrowserLayout.styl
+++ b/app/containers/BrowserContainer/BrowserLayout.styl
@@ -154,6 +154,8 @@ input
     .switch-mode-title
         stretch(row)
         align-items: center
+        .switch-mode-title-text
+            margin-right: 3px
     .current-stack-indicator
         width: 16px
         height: 16px
