--- a/app/containers/StackListContainer/StackListLayout.styl
+++ b/app/containers/StackListContainer/StackListLayout.styl
@@ -26,11 +26,14 @@
             transition: all .5s ease
             z-index: 3
             cursor: pointer
+            width: 250px
             .list-btn-text
                 text-transform: uppercase;
                 font-family: var(--font-mont);
                 // font-size: 13px;
                 font-weight: bold;
+            span:last-child
+                float:right
         .list-btn.in
                 background: var(--color-corpus-in)
         .list-btn.out
