--- a/app/containers/WebentityBrowseContainer/WebentityBrowseLayout.styl
+++ b/app/containers/WebentityBrowseContainer/WebentityBrowseLayout.styl
@@ -48,6 +48,9 @@
                 transition: all .2s ease
                 min-width: 30%
                 
+                span.set-status-container-text
+                    margin-right: 3px
+
                 @media (max-width: $tablet-break-point)
                     width: 100%
                     margin-bottom: 10px
